[gd_scene load_steps=2 format=3 uid="uid://dmysnlqa41guv"]

[ext_resource type="Script" uid="uid://cfykx5f1m6cjg" path="res://app/src/main/cpp/gui_button.gd" id="1_0hq7w"]

[node name="GUIButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0hq7w")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Glow" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true

[node name="Text" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 240.0
offset_top = 160.0
offset_right = 280.0
offset_bottom = 183.0

[node name="TextImage" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
